--- a/ChaosDrive/ChaosDriveContentLibrary/ChaosDriveContentLibrary.csproj
+++ b/ChaosDrive/ChaosDriveContentLibrary/ChaosDriveContentLibrary.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="BezierCurveEnemyData.cs" />
     <Compile Include="BezierCurveShootingEnemyData.cs" />
+    <Compile Include="EnemyBulletData.cs" />
     <Compile Include="EnemyData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StandardEnemyData.cs" />
